# cch23-8bit

./: .gitattributes  Cargo.toml  askama.toml  license  readme.md
.sqlx/: query-151f4eccea644038b2c09878867168afca3e5adbbfa7848618c29646e2db8ae3.json  query-1c9e1cc1e5326aca618ac1093c97eb9d50290537c93baa76a70285559b96e351.json  query-2a21722026139ab89b4f8131d12d47b1da5471d984bd015ece9051dfaccd0eaa.json  query-2b97a0afac420f8e63820a44050e0a33cfae125e7f5fe3efc2e16e9ec14f806d.json  query-37b00daca64bf079e94b5d091990c4ad3e3eef03e850641d4d4de956b1f076ae.json  query-481edabd076d347adade420c156f8de4837e8724a405e7f2b482efe074d97202.json  query-88135be668c1dc477dbc82457143a69be357317bf56a2d9a2bd7a8df0fe35ea1.json  query-999e92afab546f22ce9ddf32100053ee54863b302c966cf09ecc5e6c68006138.json  query-a85986b4dd4eb8c6e86b01ad38d0b9558d5519d218ee25a6a3bb64d0c6f49c61.json  query-bdd47285c5aec94ebd89c91f2ba2b82c1f2f8f78665f4fce65daa4ad7d2b1e0e.json  query-c4dfa427b5f37d179d841d21c84eb2e888ce6dcd363cc977745c78ebba20a235.json  query-ccbff69b8a38164440e28d068c9c8bf243905145c4c7825f9804057b59f06c1c.json  query-fa0b25c2c2e00f619c9bbdeed70e090e1a6e3aee1bd438d2cda81332af564a9d.json
src/: main.rs
src/cal/: day00.rs  day01.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  mod.rs
