[package]
name = "cch23-8bit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", default-features = false, features = ["std"] }
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = "1.34.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
uuid = "1.6.1"
